# aiolifx-scenes

./: .bumpversion.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: preview.yml  release.yml
aiolifx_scenes/: __init__.py  main.py
