[tool]
[tool.poetry]
name = "aiolifx-scenes"
version = "0.1.0"
homepage = "https://github.com/Djelibeybi/aiolifx-scenes"
description = "AsyncIO library to extract scenes from the LIFX Cloud."
authors = ["Avi Miller <me@dje.li>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "aiolifx_scenes" }
]

[tool.poetry.scripts]
lifx-scenes = "aiolifx_scenes.main:__cli__"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
httpx = "^0.23.3"
httpx-auth = "^0.15.0"

black  = { version = "^21.5b2", optional = true}
isort  = { version = "^5.8.0", optional = true}
mypy = {version = "^0.900", optional = true}
bump2version = {version = "^1.0.1", optional = true}


[tool.poetry.extras]
dev = [
    "black",
    "bump2version",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    ]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py39"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
